# BANDORI-PET-REV

./: .gitignore  .gitmodules  ASR_VOICE_INPUT_GUIDE.md  CHAT_INTEGRATION_GUIDE.md  CMakeLists.txt  CODEX_AI_OVERLAY_GUIDE.md  Cargo.toml  DISCLAIMER.md  OUTFIT.md  PROMPT.md  README.md  TOOL-convert_models_to_zst.py  action_bus.py  ai_event_bus.py  ai_status_server.py  alarm_manager.py  api-qwen.py  app_info.py  app_theme.py  app_update.py  asr_manager.py  band.json  bandori_ai_event.py  bandori_codex_runner.py  bandori_mcp_server.py  chat_attachment_manager.py  chat_commands.py  chat_config_snapshots.py  chat_integration_server.py  chat_process.py  chat_runtime.py  chat_window.py  click_motion_presets.py  compact_ai_window.py  computer_tools.py  config_manager.py  custom_model_import.py  database_manager.py  desktop_state.py  emotion_behavior.py  (+73 more)
.github/workflows/: build-installers.yml  native-ci.yml  native-release.yml
.opencode/plugins/: bandori-ai-overlay.js
audio_reference/: dialog.json
characters/: 外貌资料来源.md
characters/三角初华/: A_三角初华.md  soul.md
characters/上原绯玛丽/: A_上原绯玛丽.md
characters/丰川祥子/: A_丰川祥子.md  soul.md
characters/丸山彩/: A_丸山彩.md
characters/二叶筑紫/: A_二叶筑紫.md
characters/今井莉莎/: A_今井莉莎.md
characters/仓田真白/: A_仓田真白.md
characters/佐藤益木/: A_佐藤益木.md
characters/八幡海铃/: A_八幡海铃.md  soul.md
characters/八潮瑠唯/: A_八潮瑠唯.md
characters/冰川日菜/: A_冰川日菜.md
characters/冰川纱夜/: A_冰川纱夜.md
characters/凑友希那/: A_凑友希那.md
characters/北泽育美/: A_北泽育美.md
characters/千早爱音/: A_千早爱音.md
characters/和奏瑞依/: A_和奏瑞依.md
characters/大和麻弥/: A_大和麻弥.md
characters/奥泽美咲/: A_奥泽美咲.md
characters/宇田川亚子/: A_宇田川亚子.md
characters/宇田川巴/: A_宇田川巴.md
characters/山吹沙绫/: A_山吹沙绫.md
characters/市谷有咲/: A_市谷有咲.md
characters/广町七深/: A_广町七深.md
characters/弦卷心/: A_弦卷心.md
characters/户山明日香/: A_户山明日香.md
characters/户山香澄/: A_户山香澄.md
characters/朝日六花/: A_朝日六花.md
characters/松原花音/: A_松原花音.md
characters/桐谷透子/: A_桐谷透子.md
characters/椎名立希/: A_椎名立希.md
characters/濑田薰/: A_濑田薰.md
characters/牛込里美/: A_牛込里美.md
characters/珠手知由/: A_珠手知由.md
characters/白金燐子/: A_白金燐子.md
characters/白鹭千圣/: A_白鹭千圣.md
characters/祐天寺若麦/: A_祐天寺若麦.md  soul.md
characters/纯田真奈/: A_纯田真奈.md  soul.md
characters/美竹兰/: A_美竹兰.md
characters/羽泽鸫/: A_羽泽鸫.md
chat_window/: chat_window.py  constants.py  message_bubble.py  reply_stream.py  widgets.py
docs/: PLUGIN_SYSTEM.md  native-release.md  rust-migration.md
events/: birthday_db.json  festival_db.json
installer/: bandoripet.iss.tpl
lang/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  ja.json  ko.json  pt_PT.json  ru_RU.json  zh_CN.json  zh_TW.json
native/qt/: CMakeLists.txt  bandori_config_ffi.h  bandori_ipc_ffi.h  bandori_live2d_ffi.h  bandoripet.rc.in  live2d_gl_widget.cpp  live2d_gl_widget.h  main.cpp  native_autostart.cpp  native_autostart.h  native_computer_input.cpp  native_computer_input.h  native_first_run_wizard.cpp  native_first_run_wizard.h  native_main_window.cpp  native_main_window.h  native_radial_menu.cpp  native_radial_menu.h  pet_ipc_client.cpp  pet_ipc_client.h  pet_main.cpp  pet_process_supervisor.cpp  pet_process_supervisor.h  shared_memory_line_queue.cpp  shared_memory_line_queue.h
packaging/: .bandoripet-native-package
pixels/: frames.json
plugin_system/: __init__.py  bridge.py  installer.py  models.py  native.py  paths.py  protocol.py  redaction.py  registry.py  scanner.py  sdk.py  signing.py  supervisor.py  worker_runtime.py
rust/crates/bandori-core/: Cargo.toml
rust/crates/bandori-core/src/: asr_settings.rs  chat_actions.rs  chat_attachments.rs  chat_context.rs  chat_dashboard.rs  chat_management.rs  chat_prompt.rs  chat_tools.rs  click_motion_profiles.rs  computer_tools.rs  config.rs  config_ffi.rs  cross_chat_history.rs  dashboard.rs  data_management.rs  database.rs  emotion_behavior.rs  group_chat.rs  history_dashboard.rs  ipc.rs  ipc_ffi.rs  legacy_migration.rs  lib.rs  llm_protocol.rs  llm_settings.rs  local_integration.rs  mcp_tools.rs  memory_dashboard.rs  memory_extraction.rs  model.rs  napcat.rs  persona_settings.rs  relationship_analysis.rs  reminder.rs  screen_awareness_settings.rs  special_events.rs  statistics_dashboard.rs  tts_settings.rs  user_profiles.rs  web_tools.rs
rust/crates/bandori-core/tests/: qt_bridge_generation.rs
rust/crates/bandori-live2d/: Cargo.toml
rust/crates/bandori-live2d/src/: ffi.rs  lib.rs  module_catalog.rs  resource.rs  runtime.rs
rust/crates/bandori-llm/: Cargo.toml
rust/crates/bandori-llm/src/: lib.rs
rust/crates/bandori-qt-bridge/: Cargo.toml  build.rs
rust/crates/bandori-qt-bridge/src/: backend.rs  lib.rs
rust/crates/bandori-tts/: Cargo.toml
rust/crates/bandori-tts/src/: lib.rs
settings_window/: __init__.py  constants.py  settings_window.py  widgets.py  workers.py
tests/: test_app_theme.py  test_app_theme_memory.py  test_app_update.py  test_asr_python_detection.py  test_asr_settings_numeric.py  test_audio_runtime_safety.py  test_background_worker_lifecycle.py  test_chat_attachment_cleanup.py  test_chat_avatar_save_semantics.py  test_chat_command_save_semantics.py  test_chat_context_limits.py  test_chat_history_filters.py  test_chat_history_pagination.py  test_chat_integration_batch_semantics.py  test_chat_process_settings.py  test_chat_reopen.py  test_chat_runtime.py  test_chat_scroll_position.py  test_chat_window_save_failure.py  test_compact_ai_config.py  test_config_load_safety.py  test_config_save_result.py  test_config_temp_cleanup.py  test_custom_model_import.py  test_database_memory_safety.py  test_download_management.py  test_filesystem_mcp_server.py  test_group_reply_stream_binding.py  test_live2d_action_cache_limits.py  test_live2d_bounds_fallback.py  test_live2d_draw_failure_circuit_breaker.py  test_live2d_preview_dpi.py  test_live2d_quality.py  test_live2d_renderer_isolation.py  test_live2d_vsync.py  test_llm_api_profile_save.py  test_llm_immersion_prompt.py  test_local_http_server_lifecycle.py  test_local_reminder_tool_save_semantics.py  test_local_tool_safety.py  (+54 more)
tools/: collect_native_packages.py  export_rust_contracts.py  validate_native_install.py
(+52 files in other folders)
