[workspace]
members = [
    "rust/crates/bandori-core",
    "rust/crates/bandori-qt-bridge",
]
default-members = ["rust/crates/bandori-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
fs2 = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tempfile = "3.19.1"
thiserror = "2.0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
