[workspace]
members = [
    "rust/crates/bandori-core",
    "rust/crates/bandori-live2d",
    "rust/crates/bandori-qt-bridge",
]
default-members = ["rust/crates/bandori-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
dunce = "1.0.5"
fs2 = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sha1 = "0.10.6"
rusqlite = { version = "0.40.0", features = ["backup", "bundled"] }
mlua = { version = "0.11.6", features = ["luajit", "send", "vendored"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tar = "0.4.44"
zstd = "0.13.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
