[package]
name = "bandori-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dunce.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tar.workspace = true
zstd.workspace = true
