[package]
name = "bandori_qt_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
links = "bandori_qt_bridge"

[lib]
crate-type = ["staticlib"]

[dependencies]
bandori-core = { path = "../bandori-core" }
cxx = "1.0"
cxx-qt = "0.9"
cxx-qt-lib = { version = "0.9", features = ["qt_gui"] }

[build-dependencies]
cxx-qt-build = { version = "0.9", features = ["link_qt_object_files"] }
