[package]
name = "bandori_qt_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
links = "bandori_qt_bridge"

[lib]
crate-type = ["staticlib"]

[dependencies]
bandori-asr = { path = "../bandori-asr" }
bandori-core = { path = "../bandori-core" }
bandori-llm = { path = "../bandori-llm" }
bandori-live2d = { path = "../bandori-live2d" }
bandori-tts = { path = "../bandori-tts" }
base64.workspace = true
cxx = "1.0"
cxx-qt = "0.9"
cxx-qt-lib = { version = "0.9", features = ["qt_gui"] }
serde_json = "1.0"
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[build-dependencies]
cxx-qt-build = { version = "0.9", features = ["link_qt_object_files"] }
